[partial bp/r21785 + r23911][FIX] wiki page: the technical hr below the wikitext must have visibility=hidden style for being hidden in Internet Explorer
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/proposals@25125 b456876b-0849-0410-b77d-98878d47e9d5

--- a/4.x/styles/layout/layout.css
+++ b/4.x/styles/layout/layout.css
@@ -895,6 +895,14 @@ div#page-bar {
 	float: left;
 }
 
+/*Information below the wiki content must not overlap the wiki 
+		content that could contain floated elements */
+.hrwikibottom {
+	clear: both;
+	height: 0px;
+	visibility: hidden;
+}
+
 .wiki-edithelp {
 	display: none;
 }
